--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -25,10 +25,14 @@ form {
     width: 200px;
     height: 200px;
     margin-right: 20px;
+    margin-bottom: 20px;
 }
 .user-img {
     width: 100%;
+    height: 100%;
     border-radius: 50%;
+    vertical-align: middle;
+    object-fit: cover;
 }
 
 .update-form {
