--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -42,3 +42,12 @@ form {
 .forms {
     display: flex;
 }
+
+.post-form {
+    margin-left: 0;
+}
+
+.post-form textarea {
+    width: 700px;
+    height: 300px;
+}
