added posts pagination and search form model

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -61,3 +61,14 @@ form {
     padding: 20px;
     margin-bottom: 20px;
 }
+.form-inline {
+    float: right;
+    margin-left: auto;
+}
+.form-inline input {
+    display: block;
+    margin-top: 7px;
+}
+.form-inline button {
+    margin-top: 7px;
+}
