--- a/app/templates/posts.html
+++ b/app/templates/posts.html
@@ -20,11 +20,47 @@
 
 {% block content %}
 
-{% for post in posts %}
+{% for post in posts.items %}
 <div class="post">
   <h2><a href="{{ url_for('post', post_id=post.id) }}">{{post.title}}</a></h2>
   <p>{{ post.content | truncate(50) }}</p>
 </div>
 {% endfor %}
+
+<!-- Pagination Links-->
+<div class="text-right">
+  <a href="{{ url_for('posts', page=posts.prev_num) }}"
+     class="btn btn-outline-dark 
+     {% if posts.page == 1 %}disabled{% endif %}">
+      &laquo;
+  </a>
+<!-- Loop through the number of pages to display a link for each-->
+  {% for page_num in posts.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
+{% if page_num %}
+<!-- Check for the active page and set the link to "Active"-->
+          {% if posts.page == page_num %}
+          <a href="{{ url_for('posts', page=page_num) }}"
+             class="btn btn-primary">
+              {{ page_num }}
+          </a>
+          {% else %}
+          <a href="{{ url_for('posts', page=page_num) }}"
+             class="btn btn-dark">
+              {{ page_num }}
+          </a>
+          {% endif %}
+      {% else %}
+          ...
+      {% endif %}
+  {% endfor %}
+  <a href="{{ url_for('posts', page=posts.next_num) }}"
+     class="btn btn-dark 
+     {% if posts.page == posts.pages %}disabled{% endif %}">
+      &raquo;
+  </a>
+</div>
+<p class="text-right mt-3">
+  Showing page {{ posts.page }} of {{ posts.pages }}
+</p>
 
 {% endblock %}
