--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -42,6 +42,12 @@
         </li>
       </ul>
 
+      <form class="form-block" method="GET" action="{{ url_for('posts') }}">
+        <input class="form-control" name='search_query' value="{{ request.args.get('search_query', '') }}" type="text" placeholder="Search" aria-label="Search">
+        <input type="submit" style="display: none" value="go">
+      </form>
+    </div>
+
     </div>
   </nav>
 
