added module to generate fake posts; added admin dashboard to users and posts with deny access to not admin users; rebuild password crypt logic

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -38,6 +38,9 @@
         <li><a href="{{url_for('new_post')}}">Create post</a></li>
         <li><a href="{{url_for('account')}}">Account</a></li>
         <li class="logout"><a href="{{url_for('logout')}}"> Logout</a></li>
+        {% if current_user.is_admin() %}
+        <li><a href="/admin">Admin</a></li>
+        {% endif %}
         {% endif %}
         </li>
       </ul>
