--- a/app/templates/post/post.html
+++ b/app/templates/post/post.html
@@ -8,7 +8,7 @@
 {%endfor %}
 
 <h1>{{ post.title }}</h1>
-<p>{{ post.content }}</p>
+<p>{{ post.content | markup }}</p>
 <b>Created by: </b> {{ creator }}
 <p>From: {{ post.date_posted }}</p>
 
