--- a/app/templates/post/posts.html
+++ b/app/templates/post/posts.html
@@ -23,7 +23,7 @@
 {% for post in posts.items %}
 <div class="post">
   <h2><a href="{{ url_for('post', post_id=post.id) }}">{{post.title}}</a></h2>
-  <p>{{ post.content | truncate(50) }}</p>
+  <p>{{ post.content | truncate(100) | markup }}</p>
 </div>
 {% endfor %}
 
