authentication was rebuild to blueprint insnance

--- a/app/auth/templates/auth/register.html
+++ b/app/auth/templates/auth/register.html
@@ -14,7 +14,7 @@
 
 {% from "_render_field.html" import render_field %}
 
-<form method="POST" action="{{url_for('register')}}">
+<form method="POST" action="{{url_for('auth.register')}}">
 
  {{ form.csrf_token }}
 
