--- a/app/auth/templates/auth/login.html
+++ b/app/auth/templates/auth/login.html
@@ -14,7 +14,7 @@
 
 {% from "_render_field.html" import render_field %}
 
-<form method="POST" action="{{url_for('login')}}">
+<form method="POST" action="{{url_for('auth.login')}}">
 
  {{ form.csrf_token }}
 
