--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -32,12 +32,12 @@
         <li><a href="{{url_for('posts.get_posts')}}"> Posts</a></li>
 
         {% if current_user.is_anonymous %}
-        <li><a href="{{url_for('login')}}"> Login</a></li>
-        <li><a href="{{url_for('register')}}"> Register</a></li>
+        <li><a href="{{url_for('auth.login')}}"> Login</a></li>
+        <li><a href="{{url_for('auth.register')}}"> Register</a></li>
         {% else %}
         <li><a href="{{url_for('posts.new_post')}}">Create post</a></li>
         <li><a href="{{url_for('account')}}">Account</a></li>
-        <li class="logout"><a href="{{url_for('logout')}}"> Logout</a></li>
+        <li class="logout"><a href="{{url_for('auth.logout')}}"> Logout</a></li>
         {% if current_user.is_admin() %}
         <li><a href="/admin">Admin</a></li>
         {% endif %}
